welcome.lessons.welcome.loopdowhile.Poucet2.scala.error
Poucet:2: error: illegal start of simple expression
do [
   ^Poucet:21: error: 'while' expected but '}' found.
  }
  ^Poucet:22: error: ';' expected but 'while' found.
} while (!sortieTrouvee()) 
  ^Poucet:24: error: Unmatched closing brace '}' ignored here
	}
        ^Poucet:25: error: eof expected but '}' found.
}
^